# 8BitAssembler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ASMFiles/: Exam.asm  JackWiegman_ASMPart5.asm  JackWiegman_ASMPart6.asm  JackWiegman_ASMPart7.asm  JackWiegman_ASMPart8.asm  JackWiegman_ASMPart9.asm
src/: JackWiegman_AssemblerPart9.c
